# pt-performance

./: .env  .env.example  .env.template  .gitignore  AGENT2_FILE_MANIFEST.md  AGENT2_PHASE2_COMPLETION_REPORT.md  AGENT2_TIER_ROUTER_COMPLETION_REPORT.md  AGENT3_COMPLETION_REPORT.md  AGENT3_PHASE2_FILE_MANIFEST.md  AGENT6_FILE_MANIFEST.md  AGENT6_WAVE1_PERFORMANCE_COMPLETION_REPORT.md  AGENT8_WAVE1_DOCUMENTATION_COMPLETION_REPORT.md  AGENT9_ADVANCED_TRAINING_DEPLOYMENT_SUMMARY.md  AGENT9_WAVE2_RUST_COMPLETION_REPORT.md  APPLY_MIGRATION_20251211000008.md  APPLY_SECURITY_FIXES.md  APP_STORE_METADATA.md  BUILD45_SWARM_SUMMARY.md  BUILD69_SWARM_STATUS.md  BUILD72A_AGENT3_FINAL_REPORT.md  BUILD72A_AGENT3_MENTAL_PERFORMANCE_COMPLETE.md  BUILD72A_Q2_2025_COMPLETE.md  BUILD_72A_AGENT_2_COMPLETE.md  BUILD_72A_AGENT_4_HELP_SYSTEM_COMPLETE.md  BUILD_72A_AGENT_4_QUICK_REFERENCE.md  BUILD_72A_AGENT_7_COMPLETE.md  BUILD_72A_AGENT_8_DELIVERY.md  BUILD_72A_AGENT_8_SUMMARY.md  BUILD_72A_DEPLOYMENT_STATUS.md  BUILD_72A_FILE_TREE.txt  BUILD_72A_LINEAR_UPDATE.md  BUILD_72A_QUICK_START.md  BUILD_72A_VERIFICATION.txt  BUILD_73_COMPREHENSIVE.md  BUILD_73_QUICK_START.md  BUILD_74_CRITICAL_BUGS.md  CHANGELOG.md  DEMO.md  DEPLOYMENT_COMPLETE.md  DEPLOY_NOW.md  (+163 more)
.appstore/: app-description.md  metadata-checklist.md  release-notes-1.0.md  review-notes.md
.backlog/: backlog-polish-1.json  (+6 more)
clients/quiver/quiver_platform/zones/z07_data_access/rust/lincs_similarity/: Cargo.toml  build_engine.sh
clients/quiver/quiver_platform/zones/z07_data_access/rust/lincs_similarity/src/: lib.rs
tasks/: lessons.md  (+1 more)
(+3526 files in other folders)
