[package]
name = "lincs_similarity_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "lincs_similarity_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
ndarray = "0.15"
rayon = "1.8"
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
